Update and rename 2018-10-12-First-Man-Review.md to 2018-10-12-First-Man.md

--- a/_posts/2018-10-12-First-Man.md
+++ b/_posts/2018-10-12-First-Man.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: First Man Review
+title: First Man
 author: gaffney_luk
 feature-img: "assets/img/feature-imgs/first-man.jpg"
 thumbnail: "assets/img/thumbnails/first-man.jpg"
