--- a/_posts/2018-10-15-Far-Cry-5.md
+++ b/_posts/2018-10-15-Far-Cry-5.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Far Cry 5 Review
+title: Far Cry 5
 author: matthew_yung
 feature-img: "assets/img/feature-imgs/far-cry-5.jpg"
 thumbnail: "assets/img/thumbnails/far-cry-5.jpeg"
