post for 2018-10-22, rename jpeg tp jpg, updated photos for posts

--- a/_posts/2018-10-15-Far-Cry-5.md
+++ b/_posts/2018-10-15-Far-Cry-5.md
@@ -3,7 +3,7 @@ layout: post
 title: Far Cry 5
 author: matthew_yung
 feature-img: "assets/img/feature-imgs/far-cry-5.jpg"
-thumbnail: "assets/img/thumbnails/far-cry-5.jpeg"
+thumbnail: "assets/img/thumbnails/far-cry-5.jpg"
 tags: [Game, Review]
 excerpt_separator: <!--more-->
 thumbnail_drop: 60
