--- a/_posts/2018-10-12-First-Man.md
+++ b/_posts/2018-10-12-First-Man.md
@@ -4,7 +4,7 @@ title: First Man
 author: gaffney_luk
 feature-img: "assets/img/feature-imgs/first-man.jpg"
 thumbnail: "assets/img/thumbnails/first-man.jpg"
-tags: [Movie, Review]
+tags: [Movie]
 excerpt_separator: <!--more-->
 thumbnail_drop: 20
 rating: eight half
