--- a/_posts/2018-10-15-Far-Cry-5.md
+++ b/_posts/2018-10-15-Far-Cry-5.md
@@ -4,7 +4,7 @@ title: Far Cry 5
 author: matthew_yung
 feature-img: "assets/img/feature-imgs/far-cry-5.jpg"
 thumbnail: "assets/img/thumbnails/far-cry-5.jpg"
-tags: [Game, Review]
+tags: [Game]
 excerpt_separator: <!--more-->
 thumbnail_drop: 60
 rating: six
