Consistent verdict header

--- a/_posts/2018-10-12-First-Man.md
+++ b/_posts/2018-10-12-First-Man.md
@@ -25,6 +25,6 @@ Ryan Gosling, coming off a hot streak of *La La Land* and *Blade Runner 2049*, p
 
 The film covers almost a ten-year period, spanning from Project Gemini to the Moon landing. There are several time jumps that serve to cover nearly every major event in this decade. Time skips around so much that it almost leaves little room for the viewer to breath and reflect, and the impact of the emotional beats suffer as a result. Still, I was on the edge of my seat for the entirety of the 2 hour and 20 minute runtime. Everyone knows we succeeded in landing on the Moon, but it’s the journey that matters. The trial and error, the desperation to beat the Soviets, and the human spirit persevering through all the failures in order to succeed was enthralling. You want the Americans to prevail. You want them to keep trying as politics and public opinion tell them otherwise. You hold your breath as mankind learns to travel through space. It’s an inspiration story of the resolve of mankind to reach new frontiers. The ending of this film will be contested, however, as its artistic license with Neil Armstrong’s little known personal life is shown.
 
-# Conclusion
+# Verdict
 
 While it’s a story that has been told time and time again, *First Man* never fails to capture its audience’s attention through its stunning imagery, crisp sound design, and its wonderful performances from its two leads. The moon landing sequence alone makes this a must-see in full IMAX glory. Despite the lacklustre supporting cast, disjointed timeline, and perhaps unnecessary family drama, *First Man* is one giant leap for cinema.
